@@ -1,0 +1,13 @@
+[buildout]
+extends =
+    buildout.cfg
+    http://svn.plone.org/svn/collective/buildout/hudson/hudson.cfg
+
+package-name = plone.app.discussion
+package-directories = .
+
+jstestdriver-directories =
+    plone/app/discussion
+
+browsers =
+    /usr/bin/firefox
