@@ -26,6 +26,7 @@ setup(name='plone.app.discussion',
           'collective.monkeypatcher',
           'plone.app.layout',
           'plone.app.registry',
+          'plone.app.uuid',
           'plone.app.z3cform',
           'plone.indexer',
           'plone.registry',
